tests/fixtures/invalid/pow_list_set_str.py
# Cannot call pow() with List[int], Set[int], Str
x = pow([1, 2, 3], {1, 2, 3}, "hello")
